# pg

./: .gitignore
filter-app/: README.md  filter.py  main.py  sticker.py
hello-triangle/: CMakeLists.txt  RESULT.md
hello-triangle/src/: CMakeLists.txt  Source.cpp
lista-1/: CMakeLists.txt  README.md
lista-1/lib/glhelper/: CMakeLists.txt
lista-1/lib/glhelper/include/glhelper/: glhelper.hpp
lista-1/lib/glhelper/src/: glhelper.cpp
lista-1/src/: CMakeLists.txt  cinco.cpp  main.cpp  nove.cpp  oito.cpp  seis.cpp  sete.cpp
lista-2/: CMakeLists.txt  README.md
lista-2/src/: CMakeLists.txt  cinco.cpp  dois.cpp  quatro.cpp  shaders.hpp  tres.cpp  um.cpp
